# polyalphascan

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  OPTIMIZATION_GUIDE.md  README.md
backend/: init_data.py  pyproject.toml
backend/core/: paths.py  runner.py  state.py
backend/core/steps/: fetch.py  implications_parallel.py
backend/core/wallet/: __init__.py  encryption.py
backend/server/: clob_websocket.py  main.py  portfolio_service.py  price_aggregation_multi_ws.py  token_resolver.py
backend/server/routers/: __init__.py  data.py  markets.py  monitoring.py  wallet.py
experiments/trading/: 01_setup_wallet.py  02_swap_to_usdc_e.py  03_buy_position.py
frontend/: next.config.js  package-lock.json  package.json  server.js
frontend/app/: globals.css  layout.tsx
frontend/app/api/markets/: route.ts
frontend/app/markets/: page.tsx
frontend/app/monitoring/: page.tsx
frontend/app/pipeline/: page.tsx
frontend/app/positions/: page.tsx
frontend/app/terminal/: page.tsx
frontend/components/: OpenClawChat.tsx  PipelineTimeline.tsx  PortfolioModal.tsx  PriceFlash.tsx  PriceProvider.tsx  Providers.tsx  Sidebar.tsx  StatusIndicators.tsx
frontend/components/terminal/: ExportDropdown.tsx  PipelineDropdown.tsx  PortfolioTable.tsx  QuickActions.tsx  WalletDropdown.tsx
frontend/components/trading/: BuyPairModal.tsx
frontend/config/: api-config.ts
frontend/hooks/: usePortfolioPrices.ts  useWallet.tsx
frontend/types/: portfolio.ts
frontend/utils/: format-time.ts
src/: index.ts
src/trader-monitor/: client.ts  readme.md  scanner.ts  traders.ts
(+1 files in other folders)
