[project]
name = "alphapoly-backend"
version = "0.1.0"
description = "Polymarket alpha detection API and ML pipeline"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "gliner2>=1.2.3",
    "glirel>=1.2.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "polars>=1.36.1",
    "python-dotenv>=1.2.1",
    "pyvis>=0.3.2",
    "rapidfuzz>=3.14.3",
    "sentence-transformers>=5.2.0",
    "scikit-learn>=1.6.0",
    # Console output
    "rich>=13.0.0",
    # API
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
    "websockets>=12.0",
    "watchfiles>=0.21.0",
    # Export
    "jinja2>=3.1.0",
    "hdbscan>=0.8.41",
    "eth-account>=0.13.7",
    "py-clob-client>=0.34.5",
    "web3>=7.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "core"]
